--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,12 +20,12 @@
                         <Font size="18.0" />
                     </font>
                 </TextField>
-            <ImageView fitHeight="94.0" fitWidth="91.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="88.0" fitWidth="84.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="btProfil" layoutX="122.0" layoutY="19.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="207.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
+            <Button fx:id="btProfil" layoutX="122.0" layoutY="19.0" mnemonicParsing="false" onAction="#checkBtProfilClick" prefHeight="51.0" prefWidth="207.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
                <graphic>
                   <ImageView fx:id="btProfil" fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -56,54 +54,90 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="697.0" prefWidth="741.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <Label layoutX="36.0" layoutY="127.0" prefHeight="103.0" prefWidth="449.0" text="Coming soon" textFill="RED">
+                  <Label layoutX="146.0" layoutY="152.0" prefHeight="103.0" prefWidth="449.0" text="Coming soon" textFill="#ababab">
                      <font>
                         <Font size="70.0" />
                      </font>
                   </Label>
-                  <TableView layoutX="14.0" layoutY="14.0" prefHeight="680.0" prefWidth="739.0">
-                    <columns>
-                      <TableColumn prefWidth="212.0" />
-                      <TableColumn minWidth="0.0" prefWidth="244.0" />
-                    </columns>
-                  </TableView>
                </children>
             </AnchorPane>
         </content>
       </ScrollPane>
    </center>
    <left>
-          <VBox prefHeight="450.0" prefWidth="78.0" style="-fx-background-color: #123626;" BorderPane.alignment="CENTER">
+          <VBox prefHeight="469.0" prefWidth="84.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
               <children>
-                  <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #123626; -fx-border-color: #F6ECCB;" text="Vegetable" textFill="WHITE">
+                  <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #648E12; -fx-border-color: #ffffff; " textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
+               <graphic>
+                  <ImageView fitHeight="42.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/karotte.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                   </Button>
-                  <Button fx:id="btFruit" mnemonicParsing="false" onAction="#checkBtFruitClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Fruit" textFill="WHITE">
+                  <Button fx:id="btFruit" mnemonicParsing="false" onAction="#checkBtFruitClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #BA3F3B; -fx-border-color: #ffffff; " textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
+               <graphic>
+                  <ImageView fitHeight="52.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/apfel.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                   </Button>
-                  <Button fx:id="btSweeties" mnemonicParsing="false" onAction="#checkBtSweetiesClick" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Sweeties" textFill="WHITE">
+                  <Button fx:id="btSweeties" mnemonicParsing="false" onAction="#checkBtSweetiesClick" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #F03C70; -fx-border-color: #ffffff; ;" textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
+               <graphic>
+                  <ImageView fitHeight="43.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/schokolade.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                   </Button>
-                  <Button fx:id="btBackery" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
+                  <Button fx:id="btBackery" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #DF8C1A; -fx-border-color: #ffffff; " textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
+               <graphic>
+                  <ImageView fitHeight="47.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/stangenbrot.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                   </Button>
-                  <Button fx:id="btLiquir" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Liquir" textFill="WHITE">
+                  <Button fx:id="btLiquir" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #5D8DA2; -fx-border-color: #ffffff; /*-fx-border-radius: 15px; -fx-background-radius: 15px;*/" textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
+               <graphic>
+                  <ImageView fitHeight="35.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/wasser.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                   </Button>
-            <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
+            <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff; -fx-border-radius: 15px; -fx-background-radius: 15px;" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="35.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/tag-schwarze-form.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
               </children>
           </VBox>
