--- a/src/main/resources/fxml/item.fxml
+++ b/src/main/resources/fxml/item.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,7 +14,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="187.0" stroke="BLACK" strokeType="INSIDE" width="187.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="178.0" stroke="BLACK" strokeType="INSIDE" width="178.0" />
       <BorderPane prefHeight="187" prefWidth="187">
           <top>
               <StackPane layoutY="12.0">
@@ -27,22 +27,23 @@
           </top>
           <center>
               <ImageView fx:id="imgViewItem" fitHeight="100.0" fitWidth="100.0">
-                  <Image url="@file"/>
+                  <Image url="@file" />
               </ImageView>
           </center>
           <bottom>
               <AnchorPane translateY="-10.0">
-                  <Button fx:id="btnFav" AnchorPane.leftAnchor="10.0">
+                  <ImageView fx:id="imgHeartView" fitHeight="30.0" fitWidth="30.0" layoutX="16.0">
+                      <Image fx:id="imgHeart" url="@../images/icons/herzform-umriss.png" />
+                  </ImageView>
+                  <!--Button fx:id="btnFav" AnchorPane.leftAnchor="10.0">
                       <graphic>
-                          <ImageView fx:id="imgHeartView" fitHeight="22" fitWidth="22">
-                              <Image fx:id="imgHeart" url="@../images/icons/herzform-umriss.png" />
-                          </ImageView>
+
                       </graphic>
-                  </Button>
-                      <HBox AnchorPane.rightAnchor="10.0">
-                          <TextField prefHeight="30" prefWidth="30" text="1" />
-                          <Button prefHeight="30" prefWidth="40.0" text="buy" />
-                      </HBox>
+                  </Button-->
+                  <HBox AnchorPane.rightAnchor="10.0">
+                      <Spinner editable="true" prefHeight="30.0" prefWidth="50.0" />
+                      <Button prefHeight="30" prefWidth="40.0" text="buy" />
+                  </HBox>
               </AnchorPane>
           </bottom>
       </BorderPane>
