--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -15,9 +15,9 @@
     <top>
         <AnchorPane prefHeight="85.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="407.0" layoutY="22.0" prefHeight="37.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
+                <TextField fx:id="tbSearch" onAction="#search" alignment="CENTER" layoutX="407.0" layoutY="22.0" prefHeight="37.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235; -fx-text-fill: #ffffff">
                     <font>
-                        <Font size="18.0" />
+                        <Font size="18.0"/>
                     </font>
                 </TextField>
             <ImageView fitHeight="92.0" fitWidth="88.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
@@ -50,17 +50,8 @@
         </AnchorPane>
     </top>
    <center>
-      <ScrollPane prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER">
+      <ScrollPane fx:id="scrollPaneItems" prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER" fitToWidth="true">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="697.0" prefWidth="741.0" style="-fx-background-color: #ffffff;">
-               <children>
-                  <Label layoutX="146.0" layoutY="152.0" prefHeight="103.0" prefWidth="449.0" text="Coming soon" textFill="#ababab">
-                     <font>
-                        <Font size="70.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
         </content>
       </ScrollPane>
    </center>
@@ -103,7 +94,7 @@
                   </ImageView>
                </graphic>
                   </Button>
-                  <Button fx:id="btBackery" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #DF8C1A; -fx-border-color: #ffffff; " textFill="WHITE">
+                  <Button fx:id="btBakery" mnemonicParsing="false" onAction="#checkBtBakeryClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #DF8C1A; -fx-border-color: #ffffff; " textFill="WHITE">
                       <font>
                           <Font name="System Bold" size="17.0" />
                       </font>
@@ -127,7 +118,7 @@
                   </ImageView>
                </graphic>
                   </Button>
-            <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff; -fx-border-radius: 15px; -fx-background-radius: 15px;" textFill="WHITE">
+            <Button fx:id="btTag" mnemonicParsing="false" onAction="#checkBtTagClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff; -fx-border-radius: 15px; -fx-background-radius: 15px;" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
