--- a/src/main/resources/Profil.fxml
+++ b/src/main/resources/Profil.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerProfil">
    <center>
       <AnchorPane prefHeight="487.0" prefWidth="579.0" BorderPane.alignment="CENTER">
@@ -22,7 +21,7 @@
             </ImageView>
             <Label layoutX="61.0" layoutY="52.0" prefHeight="40.0" prefWidth="479.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
                <font>
-                  <Font size="24.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
          </children>
@@ -35,7 +34,7 @@
                <graphic>
                   <ImageView fitHeight="50.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons/einkaufswagen-farbig.png" />
+                        <Image url="@images/icons/zuhause_Blau.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -45,7 +44,7 @@
                   <Font name="System Bold" size="33.0" />
                </font>
             </Label>
-            <Button fx:id="btHome1" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="74.0" prefWidth="75.0" style="-fx-background-color: #022235;">
+            <Button fx:id="btShoppingcart" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="74.0" prefWidth="75.0" style="-fx-background-color: #022235;">
                <graphic>
                   <ImageView fitHeight="39.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -60,7 +59,7 @@
    <left>
       <VBox prefHeight="478.0" prefWidth="77.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="81.0" style="-fx-background-color: #022235;">
+            <Button mnemonicParsing="false" prefHeight="156.0" prefWidth="77.0" style="-fx-background-color: #022235; -fx-border-color: white;">
                <graphic>
                   <ImageView fitHeight="43.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -69,7 +68,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="81.0" style="-fx-background-color: #022235;">
+            <Button mnemonicParsing="false" prefHeight="163.0" prefWidth="77.0" style="-fx-background-color: #022235; -fx-border-color: white;">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -78,7 +77,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="81.0" style="-fx-background-color: #022235;">
+            <Button mnemonicParsing="false" prefHeight="168.0" prefWidth="77.0" style="-fx-background-color: #022235; -fx-border-color: white;">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                      <image>
