--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,20 +10,24 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerMainPage">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="860.0" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerMainPage">
     <top>
         <AnchorPane prefHeight="85.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="tbSearch" onAction="#search" alignment="CENTER" layoutX="407.0" layoutY="22.0" prefHeight="37.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235; -fx-text-fill: #ffffff">
+                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="407.0" layoutY="22.0" onAction="#search" prefHeight="37.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235; -fx-text-fill: #ffffff">
                     <font>
-                        <Font size="18.0"/>
+                        <Font size="18.0" />
                     </font>
                 </TextField>
-            <ImageView fitHeight="92.0" fitWidth="88.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/other/SpeisenOase-Logo.jpg" />
-               </image>
-            </ImageView>
+            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="84.0" prefWidth="74.0" style="-fx-background-color: transparent">
+               <graphic>
+                  <ImageView fitHeight="84.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true" style="-fx-fit-width: 100%; -fx-fit-height: 100%;">
+                     <image>
+                        <Image url="@images/other/SpeisenOase-Logo.jpg" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
             <Button fx:id="btProfil" layoutX="122.0" layoutY="19.0" mnemonicParsing="false" onAction="#checkBtProfilClick" prefHeight="51.0" prefWidth="207.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
@@ -37,7 +40,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btShoppingcart" layoutX="783.0" layoutY="11.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;">
+            <Button fx:id="btShoppingcart" layoutX="783.0" layoutY="11.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;" AnchorPane.rightAnchor="14.0">
                <graphic>
                   <ImageView fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -50,7 +53,7 @@
         </AnchorPane>
     </top>
    <center>
-      <ScrollPane fx:id="scrollPaneItems" prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER" fitToWidth="true">
+      <ScrollPane fx:id="scrollPaneItems" fitToWidth="true" prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER">
         <content>
         </content>
       </ScrollPane>
