--- a/src/main/resources/fxml/item.fxml
+++ b/src/main/resources/fxml/item.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
+<StackPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="235.0" stroke="BLACK" strokeType="INSIDE" translateX="3.0" translateY="3.0" width="183.0" />
       <BorderPane prefHeight="240.0" prefWidth="188.0">
@@ -47,7 +47,10 @@
                   </Button-->
                   <HBox AnchorPane.rightAnchor="10.0">
                       <Spinner fx:id="spinner" editable="true" prefHeight="30.0" prefWidth="50.0" />
-                      <Button fx:id="button" prefHeight="30" prefWidth="40.0" text="buy" />
+                      <Button fx:id="button" prefHeight="30" prefWidth="40.0" style="-fx-background-color: #01212E;" text="buy" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                   </HBox>
               </AnchorPane>
           </bottom>
